kmom03 main wrap fix

--- a/themes/kmom03/css/style.css
+++ b/themes/kmom03/css/style.css
@@ -6566,7 +6566,7 @@ pre code {
 .logo {
   position: relative;
   top: 5px;
-  opacity: 0.7;
+  opacity: 0.5;
   height: 25px;
 }
 
@@ -6651,10 +6651,11 @@ pre code {
 }
 
 .main-wrap {
+  position: relative;
+  top: 10%;
   overflow: hidden;
   position: relative;
   height: 75%;
-  overflow-y: scroll;
 }
 
 .main-wrap-img {
