--- a/themes/kmom03/scss/header.scss
+++ b/themes/kmom03/scss/header.scss
@@ -24,7 +24,7 @@
 .logo {
     position: relative;
     top: 5px;
-    opacity: 0.7;
+    opacity: 0.5;
     height: 25px;
 }
 
